[workspace]
resolver = "2"
members = [
    "web_atoms",
    "markup5ever",
    "html5ever",
    "rcdom",
    "xml5ever",
    "tendril",
]

[workspace.package]
version = "0.38.0"
license = "MIT OR Apache-2.0"
authors = [ "The html5ever Project Developers" ]
repository = "https://github.com/servo/html5ever"
edition = "2021"
rust-version = "1.71.0"

[workspace.dependencies]
# Repo dependencies
tendril = { version = "0.5", path = "tendril" }
web_atoms = { version = "0.2.1", path = "web_atoms" }
markup5ever = { version = "0.38", path = "markup5ever" }
xml5ever = { version = "0.38", path = "xml5ever" }
html5ever = { version = "0.38", path = "html5ever" }

# External dependencies
encoding_rs = "0.8.12"
log = "0.4"
new_debug_unreachable = "1.0.2"
phf = "0.13"
phf_codegen = "0.13"
string_cache = { version = "0.9.0", default-features = false }
string_cache_codegen = "0.6.1"
utf-8 = "0.7"

# Dev dependencies
criterion = "0.8"
env_logger = "0.10"
libtest-mimic = "0.8.1"
rand = "0.9"
serde_json = "1.0"
typed-arena = "2.0.2"
