[package]
name = "html5ever-atoms"
version = "0.2.1"
authors = [ "The html5ever Project Developers" ]
license = "MIT / Apache-2.0"
repository = "https://github.com/servo/html5ever"
description = "Static strings for html5ever"
documentation = "https://docs.rs/html5ever-atoms"
build = "build.rs"

[lib]
path = "lib.rs"

[features]
heap_size = ["heapsize", "heapsize_derive", "string_cache/heapsize"]

[dependencies]
string_cache = "0.4"
heapsize = { version = "0.3", optional = true }
heapsize_derive = { version = "0.1", optional = true }

[build-dependencies]
string_cache_codegen = "0.3"
