[package]

name = "html5ever_capi"
version = "0.1.0"
authors = [ "The html5ever Project Developers" ]

[lib]
name = "html5ever_capi"
crate-type = ["staticlib"]

[dependencies]
libc = "0"
string_cache = "0"
string_cache_plugin = "0"

[dependencies.html5ever]
path = "../"


[dependencies.tendril]
git = "https://github.com/kmcallister/tendril"