[package]

name = "html5ever_capi"
version = "0.0.0"
authors = [ "The html5ever Project Developers" ]

[lib]
name = "html5ever_capi"
crate-type = ["staticlib"]

[dependencies]
libc = "0"

[dependencies.html5ever]
path = "../"

[dependencies.string_cache]
git = "https://github.com/servo/string-cache"
[dependencies.string_cache_plugin]
git = "https://github.com/servo/string-cache"
