[package]
name = "html5ever"
version = "0.31.0"
authors = [ "The html5ever Project Developers" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/html5ever"
description = "High-performance browser-grade HTML5 parser"
documentation = "https://docs.rs/html5ever"
categories = [ "parser-implementations", "web-programming" ]
keywords = ["html", "html5", "parser", "parsing"]
edition = "2021"
readme = "../README.md"
rust-version.workspace = true

[features]
default = ["encoding"]
trace_tokenizer = []
encoding = ["dep:encoding_rs", "markup5ever/encoding"]

[dependencies]
log = "0.4"
mac = "0.1"
markup5ever = { version = "0.16", path = "../markup5ever" }
match_token = { workspace = true }
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0.6"
typed-arena = "2.0.2"

[[bench]]
name = "html5ever"
harness = false
