[package]

name = "html5ever_macros"
version = "0.2.6"
authors = [ "The html5ever Project Developers" ]
license = "MIT / Apache-2.0"
repository = "https://github.com/servo/html5ever"
description = "High-performance browser-grade HTML5 parser − compiler plugins"

[lib]
name = "html5ever_macros"
plugin = true

[dependencies]
mac = "0"
