[package]
name = "markup5ever"
version = "0.16.1"
authors = [ "The html5ever Project Developers" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/html5ever"
description = "Common code for xml5ever and html5ever"
documentation = "https://docs.rs/markup5ever"
categories = [ "parser-implementations", "web-programming" ]
edition = "2021"
rust-version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
web_atoms = { version = "0.1", path = "../web_atoms" }
tendril = "0.4"
log = "0.4"