[package]
name = "markup5ever_rcdom"
description = "Basic, unsupported DOM structure for use by tests in html5ever/xml5ever"
readme = "README.md"
documentation = "https://docs.rs/markup5ever_rcdom"
categories = [ "parser-implementations", "web-programming" ]
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lib]
path = "lib.rs"

[dependencies]
html5ever = { workspace = true }
markup5ever = { workspace = true }
xml5ever = { workspace = true }
tendril = { workspace = true }

[dev-dependencies]
libtest-mimic = "0.8.1"
serde_json = "1.0"
env_logger = "0.10"

[[test]]
name = "html-tokenizer"
harness = false

[[test]]
name = "html-tree-builder"
harness = false

[[test]]
name = "xml-tree-builder"
harness = false

[[test]]
name = "xml-tokenizer"
harness = false
