[package]
name = "markup5ever_rcdom"
description = "Basic, unsupported DOM structure for use by tests in html5ever/xml5ever"
readme = "README.md"
documentation = "https://docs.rs/markup5ever_rcdom"
categories = [ "parser-implementations", "web-programming" ]
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[lib]
path = "lib.rs"

[dependencies]
html5ever = { workspace = true }
markup5ever = { workspace = true, features = ["serde"] }
tendril = { workspace = true }
xml5ever = { workspace = true }

[features]
source-positions = ["html5ever/source-positions"]
xhtml-self-closing = ["html5ever/xhtml-self-closing"]

[dev-dependencies]
criterion = { workspace = true }
env_logger = { workspace = true }
libtest-mimic = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "deserialize-serialize"
harness = false

[[test]]
name = "html-tokenizer"
harness = false

[[test]]
name = "html-tree-builder"
harness = false

[[test]]
name = "xml-tree-builder"
harness = false

[[test]]
name = "xml-tokenizer"
harness = false

[[test]]
name = "source-positions-integration"
required-features = ["source-positions"]

[[test]]
name = "xhtml-self-closing-integration"
required-features = ["xhtml-self-closing"]
