[package]
name = "tendril"
version = "0.5.0"
description = "Compact buffer/string type for zero-copy parsing"
authors = [
  "Keegan McAllister <mcallister.keegan@gmail.com>",
  "Simon Sapin <simon.sapin@exyr.org>",
  "Chris Morgan <me@chrismorgan.info>"
]
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
readme = "README.md"

[features]
encoding_rs = ["dep:encoding_rs"]

[dependencies]
encoding_rs = { workspace = true, optional = true}
new_debug_unreachable = { workspace = true }
utf-8 = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }
tendril = { workspace = true }

[[bench]]
name = "futf"
harness = false

[[bench]]
name = "tendril"
harness = false
