[package]
name = "xml5ever"
authors = ["The xml5ever project developers"]
description = "Push based streaming parser for XML."
documentation = "https://docs.rs/xml5ever"
homepage = "https://github.com/servo/html5ever/blob/main/xml5ever/README.md"
readme = "README.md"
keywords = ["xml", "xml5", "parser", "parsing"]
exclude = ["xml5lib-tests/*"]
categories = ["parser-implementations", "web-programming"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
trace_tokenizer = []

[dependencies]
markup5ever = { workspace = true }
log = "0.4"
mac = "0.1"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "xml5ever"
harness = false
