[package]
name = "xml5ever"
version = "0.23.0"
authors = ["The xml5ever project developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/servo/html5ever"
description = "Push based streaming parser for XML."
documentation = "https://docs.rs/xml5ever"
homepage = "https://github.com/servo/html5ever/blob/main/xml5ever/README.md"
readme = "README.md"
keywords = ["xml", "xml5", "parser", "parsing"]
exclude = ["xml5lib-tests/*"]
categories = ["parser-implementations", "web-programming"]
edition = "2021"
rust-version.workspace = true

[features]
trace_tokenizer = []

[dependencies]
log = "0.4"
markup5ever = { version = "0.17", path = "../markup5ever" }

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "xml5ever"
harness = false
