[package]
name = "xml5ever"
authors = ["The xml5ever project developers"]
description = "Push based streaming parser for XML."
documentation = "https://docs.rs/xml5ever"
homepage = "https://github.com/servo/html5ever/blob/main/xml5ever/README.md"
readme = "README.md"
keywords = ["xml", "xml5", "parser", "parsing"]
exclude = ["xml5lib-tests/*"]
categories = ["parser-implementations", "web-programming"]
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
trace_tokenizer = []
serde = ["markup5ever/serde"]

[dependencies]
markup5ever = { workspace = true }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "xml5ever"
harness = false
