[package]
name = "xtask"
version = "0.1.0"
publish = false
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
phf_codegen = "0.11.2"
proc-macro2 = "1.0.79"
quote = "1.0.35"
string_cache_codegen = "0.5.2"
syn = { version = "2.0.55", features = ["extra-traits", "full", "fold"] }
xflags = "0.3.2"
