[package]
name = "zbuf"
version = "0.1.2"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MIT/Apache-2.0"
description = "“Zero-copy” string and bytes buffers"
repository = "https://github.com/servo/html5ever/tree/zbuf"

[lib]
path = "lib.rs"
test = false

[dependencies]
utf-8 = "0.7.1"

[[test]]
name = "print_cfg"
path = "print_cfg.rs"
harness = false

[[test]]
name = "tests"
path = "tests.rs"
